# timeseries-group5

./: .gitignore  LICENSE  MAICEN_1125_M5_U1_Group_5_Assignment.ipynb  README.md  main.py  pyproject.toml
data/: PJMW_hourly_cleaned.csv
docs/: Assignment.md  contributions.md
notebooks/: MAICEN_1125_M5_U1_Group_5_Assignment (3).ipynb  MAICEN_1125_M5_U1_Group_5_Assignment.ipynb
src/: data_cleaning.py
tests/: test_data_cleaning.py
