[project]
name = "timeseries-group5"
version = "0.1.0"
description = "Time Series Analysis of PJM West Hourly Energy Consumption"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
